#6737 trying to fix scrollbars

--- a/resources/assets/sass/admin/admin.scss
+++ b/resources/assets/sass/admin/admin.scss
@@ -21,6 +21,10 @@ table.datatable {
     display: table-header-group;
   }
 }
+.scroll-table {
+  width: 100%;
+  overflow-x: auto;
+}
 .datatable_wrapper, .panel-body {
   overflow: hidden;
 }
